--- a/result.html
+++ b/result.html
@@ -1,4 +1,11 @@
 <link rel="stylesheet" type="text/css" href="result.css">
 <h2 id="info"></h2>
-<pre id="contents"></pre>
+<p>
+  <!-- https://developer.spotify.com/web-api/authorization-guide -->
+  <!-- Your application requests authorization -->
+  <!-- The user is asked to authorize access within the scopes -->
+  <a id="grant-button-clicked" href="https://accounts.spotify.com/en/authorize?client_id=3aa81ba3bbea466ba09fef04a5feea41&response_type=code&redirect_uri=https:%2F%2Fwww.jenrenalcare.com%2Fupload%2Fthank-you.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=34fFs29kd09" target="_blank">Grant</a> google-play-music-playlist-exporter to create a public playlist for you.
+</p>
+<p id="progress"></p>
+<!-- <pre id="contents"></pre> -->
 <script src="result.js"></script>
