instead of using timeout to wait for redirect url to be loaded or wait for the click event to happen, we use the chrome.tabs.onUpdated where it wait the new tab to be updated and completed then we will start to add all the songs to the playlist in Spotify

--- a/result.html
+++ b/result.html
@@ -1,11 +1,7 @@
 <link rel="stylesheet" type="text/css" href="result.css">
 <h2 id="info"></h2>
 <p>
-  <!-- https://developer.spotify.com/web-api/authorization-guide -->
-  <!-- Your application requests authorization -->
-  <!-- The user is asked to authorize access within the scopes -->
-  <a id="grant-button-clicked" href="https://accounts.spotify.com/en/authorize?client_id=3aa81ba3bbea466ba09fef04a5feea41&response_type=code&redirect_uri=https:%2F%2Fwww.jenrenalcare.com%2Fupload%2Fthank-you.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=34fFs29kd09" target="_blank">Grant</a> google-play-music-playlist-exporter to create a public playlist for you.
+  <a href="https://accounts.spotify.com/en/authorize?client_id=3aa81ba3bbea466ba09fef04a5feea41&response_type=code&redirect_uri=https:%2F%2Fwww.jenrenalcare.com%2Fupload%2Fthank-you.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=34fFs29kd09" target="_blank">Grant</a> google-play-music-playlist-exporter to create a public playlist in <a href="https://www.spotify.com" target="_blank">Spotify</a> for you.
 </p>
 <p id="progress"></p>
-<!-- <pre id="contents"></pre> -->
 <script src="result.js"></script>
